argocd/manifests/searxng/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: searxng
  labels:
    app: searxng
spec:
  type: ClusterIP
  selector:
    app: searxng
  ports:
    - name: searxng-http
      port: 8080
      targetPort: 8080
      protocol: TCP
